<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:background="#E1DFDF"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/ll1"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="#E88c3f"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/acme"
            android:text="@string/hc"
            android:textColor="#FFFFFF"
            android:textSize="28dp"
            android:textStyle="bold" />

    </RelativeLayout>

     <androidx.appcompat.widget.SearchView
         android:id="@+id/search_bar1"
         app:layout_constraintTop_toTopOf="parent"
         android:layout_marginTop="70dp"
         android:layout_width="match_parent"
         android:layout_height="60dp"
         app:queryHint="Enter disease or symptomps"
         app:iconifiedByDefault="false"
         android:paddingLeft="10dp"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
         android:background="#FFFFFF"
         android:paddingRight="10dp"
         android:focusable="false">
     </androidx.appcompat.widget.SearchView>

    <TextView
        android:id="@+id/nearby"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/asar"
        android:text="@string/nb"
        android:textColor="#000000"
        android:textSize="20dp"
        app:layout_constraintTop_toBottomOf="@id/search_bar1"
        tools:ignore="MissingConstraints" />

        <androidx.cardview.widget.CardView
            android:id="@+id/hospital1"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="6dp"
            android:layout_marginRight="6dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/nearby">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/bhc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/abhaya_libre"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:text="@string/bhca"
                    android:textColor="#000000"
                    android:textSize="22dp"
                    android:textStyle="bold" />

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/service247"
                android:layout_alignParentRight="true"
                android:paddingTop="3dp"
                android:paddingRight="3dp"/>
            </RelativeLayout>
        </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/hospital2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="6dp"
        android:layout_marginRight="6dp"
        android:layout_marginTop="2dp"
        app:layout_constraintTop_toBottomOf="@id/hospital1">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/lhh"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/abhaya_libre"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:text="@string/lhha"
                android:textColor="#000000"
                android:textSize="22dp"
                android:textStyle="bold" />
            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/service247"
                android:layout_alignParentRight="true"
                android:paddingTop="3dp"
                android:paddingRight="3dp"/>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/hospital3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:layout_marginLeft="6dp"
        android:layout_marginRight="6dp"
        app:layout_constraintTop_toBottomOf="@id/hospital2">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tmsh"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/abhaya_libre"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:text="@string/tmsha"
                android:textColor="#000000"
                android:textSize="22dp"
                android:textStyle="bold" />
        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/service247"
            android:layout_alignParentRight="true"
            android:paddingTop="3dp"
            android:paddingRight="3dp"/>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/hconcern"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/asar"
        android:text="@string/sbhc"
        android:textColor="#000000"
        android:textSize="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/hospital3" />
    
    <HorizontalScrollView
        android:id="@+id/hscroll"
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none"
        app:layout_constraintTop_toBottomOf="@id/hconcern">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent">
        <androidx.cardview.widget.CardView
            android:id="@+id/c1"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:layout_width="150dp"
            android:layout_height="170dp"
            android:background="#e88c3f">

            <RelativeLayout
                android:id="@+id/rl1"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_marginTop="20dp"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:src="@drawable/lungs"
                    android:layout_centerHorizontal="true"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="10dp"
                    android:fontFamily="@font/abhaya_libre"
                    android:text="@string/rc"
                    android:textColor="#000000"
                    android:textSize="15dp"
                    android:textStyle="bold" />
            </RelativeLayout>
        </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/c2"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:layout_width="150dp"
                android:layout_height="170dp"
                android:background="#e88c3f"
                android:layout_toRightOf="@id/c1">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                <ImageView
                    android:layout_marginTop="20dp"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:src="@drawable/bonejoint"
                    android:layout_centerHorizontal="true"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_centerHorizontal="true"
                        android:layout_marginBottom="10dp"
                        android:fontFamily="@font/abhaya_libre"
                        android:text="@string/bjc"
                        android:textColor="#000000"
                        android:textSize="15dp"
                        android:textStyle="bold" />
                </RelativeLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/c3"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:layout_width="150dp"
                android:layout_height="170dp"
                android:background="#e88c3f"
                android:layout_toRightOf="@id/c2">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <ImageView
                        android:layout_marginTop="20dp"
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:src="@drawable/painreliefclipart"
                        android:layout_centerHorizontal="true"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_centerHorizontal="true"
                        android:layout_marginBottom="10dp"
                        android:fontFamily="@font/abhaya_libre"
                        android:text="@string/pr"
                        android:textColor="#000000"
                        android:textSize="15dp"
                        android:textStyle="bold" />
                </RelativeLayout>
            </androidx.cardview.widget.CardView>
        </RelativeLayout>

    </HorizontalScrollView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/nav_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/windowBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:itemTextColor="@drawable/selector"
        app:itemIconTint="@drawable/selector"
        app:menu="@menu/menu_navigation" />


</androidx.constraintlayout.widget.ConstraintLayout>