<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E1DFDF"
    android:orientation="vertical"
    tools:context=".DrugsPage">

    <RelativeLayout
        android:id="@+id/ll2"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="#27B7F1"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/acme"
            android:text="@string/mc"
            android:textColor="#FFFFFF"
            android:textSize="28dp"
            android:textStyle="bold" />

    </RelativeLayout>

    <androidx.appcompat.widget.SearchView
        android:id="@+id/search_bar2"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="70dp"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:queryHint="Enter drugs or Health products"
        app:iconifiedByDefault="false"
        android:paddingLeft="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="#FFFFFF"
        android:paddingRight="10dp"
        android:focusable="false">
    </androidx.appcompat.widget.SearchView>

    <TextView
        android:id="@+id/nearby2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:fontFamily="@font/asar"
        android:text="@string/nps"
        android:textColor="#000000"
        android:textSize="20dp"
        app:layout_constraintTop_toBottomOf="@id/search_bar2"
        tools:ignore="MissingConstraints" />

    <androidx.cardview.widget.CardView
        android:id="@+id/hospital1"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="6dp"
        android:layout_marginRight="6dp"
        android:layout_marginBottom="2dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/nearby2">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/bhc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/abhaya_libre"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:text="@string/nms"
                android:textColor="#000000"
                android:textSize="22dp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/a241"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/service247"
                android:layout_alignParentRight="true"
                android:paddingTop="3dp"
                android:paddingRight="3dp"/>

            <ImageButton
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="#FFFFFF"
                tools:src="@android:drawable/sym_action_call"
                android:layout_toLeftOf="@+id/a241"/>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/hospital2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:layout_marginLeft="6dp"
        android:layout_marginRight="6dp"
        android:layout_marginBottom="2dp"
        app:layout_constraintTop_toBottomOf="@id/hospital1">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/lhh"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/abhaya_libre"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:text="@string/hp"
                android:textColor="#000000"
                android:textSize="22dp"
                android:textStyle="bold" />
            <ImageView
                android:id="@+id/a242"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/service247"
                android:layout_alignParentRight="true"
                android:paddingTop="3dp"
                android:paddingRight="3dp"/>
            <ImageButton
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="#FFFFFF"
                tools:src="@android:drawable/sym_action_call"
                android:layout_toLeftOf="@+id/a242"/>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/hospital3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:layout_marginLeft="6dp"
        android:layout_marginRight="6dp"
        android:layout_marginBottom="2dp"
        app:layout_constraintTop_toBottomOf="@id/hospital2"
        tools:ignore="MissingConstraints">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tmsh"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/abhaya_libre"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:text="@string/fs"
                android:textColor="#000000"
                android:textSize="22dp"
                android:textStyle="bold" />
            <ImageView
                android:id="@+id/a243"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/service247"
                android:layout_alignParentRight="true"
                android:paddingTop="3dp"
                android:paddingRight="3dp"/>
            <ImageButton
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="#FFFFFF"
                tools:src="@android:drawable/sym_action_call"
                android:layout_toLeftOf="@+id/a243"/>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/nav_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/windowBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:itemTextColor="@drawable/selector"
        app:itemIconTint="@drawable/selector"
        app:menu="@menu/menu_navigation" />

</androidx.constraintlayout.widget.ConstraintLayout>